# test-server

./: .gitignore  Cargo.toml
dict/: fortune.json  gpt-neko.json
src/: file_io.rs  io.rs  main.rs  mytype.rs  produce.rs  src.rs  test.rs  utils.rs  web_io.rs
src/produce/: chatgpt.rs  dialogue.rs  utils.rs
src/src/: data.rs  utils.rs
