[package]
name = "go-cqhttp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14.6", features = ["full"] }
tokio = { version = "1", features = ["full"] }
cron = "0.5"
chrono = "0.4"
reqwest = "0.11"
rand = "0.8"
base64 = "0.13"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.1"
